Addition of padding on credential form to prevent it from being flush with the sides on smaller screens.

--- a/website/src/app/credential-form/credential-form.component.scss
+++ b/website/src/app/credential-form/credential-form.component.scss
@@ -2,6 +2,7 @@
 
 .container {
   margin: auto;
+  padding: 0.5em;
   max-width: max(50%, 40em);
 }
 
